<resources>
    <string name="app_name">BigData101</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="intro_text">
        Welcome to Big Data 101. Here you will learn about the technological as well as the legal aspects of Big Data. We will also have a look at the General Data Protection Regulation (GDPR) and how this may affect companies in switzerland.
    </string>
    <string name="technology_text">Lets first have a look at the definition of Big Data. Big Data simply describes a data set that is too large to be processes by commercial end-user components like laptops or mobile phones or home computers. This data might be generated by sensors output a huge amount of data continuously. Or it might also be that the database of your insurance company might have grown too big for just a regualar database.</string>
    <string name="law_text">Lets have a closer look here at the law aspect of this whole topic. We will look first at the GDPR, highlighting the main principles and the consequences for the firms\n\nArticles refers to the GDPR, if the legal base is left blank (Art.X means Art. X GDPR)\n\n
        Taking into account that the provisions relating to GDPR will be newly introduced into European law, it is not predictable how the courts will decide on actions, interpretation and  legal disputes. Cases can only be added at a later date..</string>
    <string name="combination_text"> </string>
    <string name="introduction">Introduction</string>
    <string name="technology">Technology</string>
    <string name="law">Law</string>
    <string name="combination">Combination</string>
    <string name="big_data_101">Big Data 101</string>
    <string name="legal_disclaimer">No advice\nThis app contains general information about legal matters. The information is not advice, and should not be treated as such.\nLimitation of warranties\nThe legal information on this app is provided “as is” without any representations or warranties, express or implied. BigData101 makes no representations or warranties in relation to the legal information on this app. Without prejudice to the generality of the foregoing paragraph, BigData101 does not warrant that \nthe legal information on this app will be constantly available, or available at all; or\nthe legal information on this app is complete, true, accurate, up-to-date, or non-misleading.\nProfessional assistance\nYou must not rely on the information on this app as an alternative to legal advice from your attorney or other professional legal services provider. If you have any specific questions about any legal matter you should consult your attorney or other professional legal services provider. You should never delay seeking legal advice, disregard legal advice, or commence or discontinue any legal action because of information on this app.\nLiability\nNothing in this legal disclaimer will limit any of our liabilities in any way that is not permitted under applicable law, or exclude any of our liabilities that may not be excluded under applicable law.</string>
    <string name="accountability">
        GDPR brought some big changes such as in accountability. In Article 5 (2) it is stated that your organisation is responsible for and shall be able to demonstrate compliance with the other principles from paragraph 1.
        To meet the requirements of accountability, it is important for you to install appropriate organisational and technical measures.
        In some cases there are measures which you must or can take, like:\n\n
        <li>deciding on a data protection officer</li>\n\n
        <li>keeping documentation of your processing activities</li>\n\n
        <li>adopting and installing data protection policies</li>\n\n
        <li>taking a ‘data protection by design and default’ approach</li>\n\n
        <li>preparing written contracts with organisations that process personal data by your order</li>\n\n
        <li>recording and, where necessary, reporting personal data breaches</li>\n\n
        <li>installing proper security measures</li>\n\n
        <li> registering to certification schemes and considering relevant codes of conduct; and
executing data protection impact assessments for uses of personal data that are likely to be categorised as high risk to individuals interests.</li>\n\n

    </string>
    <string name="data_protection_impact_assessment">
        If your organisation wants to identify and minimise the data protection risks of a project, the data protection impact assessment (DPIA) is a big help. Your DPIA has to:\n\n
        <li>characterise the context, scope, purposes and nature of the processing</li>\n\n
        <li>detect and deal with risks to individuals</li>\n\n
        <li>evaluate proportionality, compliance and necessity measures;and</li>\n\n
        <li>detect further measures to minimise those risks</li>\n\n

    </string>
    <string name="data_protection_officer">
If you are a public authority or if you execute particular types of processing activities, the GDPR sets out the obligation for you to announce a data protection officer (DPO).\n\n
        <li>There are specific tasks of a DPO. He/She takes the role of an advisor as he/she helps you checking internal compliance, updates you on your data protection duties, allocates you on the topic of Data Protection Impact Assessments (DPIAs) and is a general contact person for supervisory authority and data cases.</li>\n\n
        <li>The DPO has to fulfill some features like showing the required knowledge about data subjects, properly resourced, independent and with competence to report to the highest management level.</li>\n\n
        <li>DPOs are a big support for you to ensure compliance and meet the obligations of accountability.</li>\n\n
        <li>In an existing organisation, the DPO can be appointed from a group of employees who are already working in that organisation or could also externally be selected.</li>\n\n
    </string>
    <string name="examples">
        <li><b>stay abroad</b> The case  of insurance protection during  a time-limited stay in a foreign country and paid services of health insurance</li>\n\n
        <li><b>cross-border commuter</b> Persons who live in any EU member country but work in Switzerland must insure themselves
and their non-active family members in Switzerland. (Federal Health Insurance Act/KVG)</li>\n\n
        <li><b>seasonal workers</b> Persons returning back to the EU and having some claims on insurance benefits ( for example health insurance)</li>\n\n
    </string>
    <string name="fines">
        The regulation lays out maximum penalties which differ depending on the type of offense.\nOne of the significant impacts is that the GDPR increases the maximum fine amount – up to €20,000,000 or up to (what can also be higher) four percent of the company’s annual “global turnover of the preceding year.\nThe consequences for global giants (such as Amazon), which have total revenues, net of taxes in the billions are exorbitant sums. The amount of fine – if any – that is actually imposed will depend on a number of different factors. An administrative fine must be effective, proportionate and dissuasive.\n\nArticle 83 of the GDPR addresses in detail the conditions for imposing administrative fines, and specifically names factors that are to be taken into consideration:\n\n
        <li>The nature, gravity, and duration of the violation</li>\n\n
        <li>The categories of personal data that are affected</li>\n\n
        <li>Previous violations</li>\n\n
        <li>Intent or negligence</li>\n\n
        <li>Actual harm done and efforts to mitigate the damage to data subjects</li>\n\n
        <li>Degree of responsibility of the controller or processor</li>\n\n
        <li>Certifications and adherence to codes of conduct</li>\n\n
        <li>Reporting of the violation</li>\n\n
        <li>Cooperation (or lack thereof) with authorities</li>\n\nIn addition, the €20,000,000 maximum apply to the higher of two tiers of violations, which include more serious offenses, such as those pertaining to the rules for obtaining consent, data subjects’ rights, rules governing data transfer, obligations to member states, and violation of an order. Namely for infringements of basic principles which are stated in Art. 5, 6, 7 and 9 GDPR.\n\nThe lower tier of violations has a maximum fine limit that is half that of the upper tier: €10,000,000 or two percent of annual turnover. Some violations that fall into this category include:\n\n

        <li>Notification of a data breach to the data subject whose personal data was impacted</li>\n\n
        <li>Notification of a data breach to the supervisory authority</li>\n\n
        <li>Failure to properly designate a data protection officer (when required)</li>\n\n
        <li>Certain conditions surrounding obtaining a child’s consent</li>\n\n

    </string>
    <string name="gdpr_principles">
        Under the GDPR, the data protection principles set out the main responsibilities for organisations which are quite similar to Swiss law and are stated in Art. 5 paragraph 1 lit. a-f  \&amp; 2 GDPR :\n\n
        <li>lawfulness, fairness and transparency</li>\n\n
        <li>purpose limitation</li>\n\n
        <li>data minimisation</li>\n\n
        <li>accuracy</li>\n\n
        <li>storage limitation</li>\n\n
        <li>integrity and confidentiality</li>\n\n
        <li>accountability</li>\n\n

    </string>
</resources>